[package]
name = "ruroonga_command"
version = "0.2.1"
authors = ["Hiroshi Hatake <cosmo0920.wp@gmail.com>"]
keywords = ["groonga"]
description = "A tiny Groonga query builder and generator."
license-file = "LICENSE"
repository = "https://github.com/cosmo0920/ruroonga_command"
build = "build.rs"

[features]
normalizer_mysql = []
unstable = []

[build-dependencies.skeptic]
version = "~0.4"
default-features = false

[dev-dependencies.skeptic]
version = "~0.4"
default-features = false

[dependencies]
url = "~1.0.0"
